bug fixed yay - magic horizontal scroll bar

--- a/src/components/TalentLayout.scss
+++ b/src/components/TalentLayout.scss
@@ -2,7 +2,7 @@
 
 .talent {
 	&-layout-container {
-		width: 100vw;
+		width: 100%;
 		height: 100%;
 		padding: 0vw 5vw 15vw 5vw;
 		position: relative;
